Replacing typeahead with uib-typeahead

--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -18,7 +18,7 @@
           <input id="timezone"
                  name="timezone"
                  ng-model="timezone"
-                 typeahead="item for item in getTypeaheadValues( $viewValue )"
+                 uib-typeahead="item for item in getTypeaheadValues( $viewValue )"
                  typeahead-editable="false"
                  typeahead-min-length="2"
                  class="form-control"
