--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -82,7 +82,7 @@
                 ng-attr-id="{{ input.key }}"
                 name="name"
                 ng-model="record[input.key]"
-                typeahead="item for item in getTypeaheadValues( input, $viewValue )"
+                uib-typeahead="item for item in getTypeaheadValues( input, $viewValue )"
                 typeahead-editable="false"
                 typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
                 typeahead-min-length="2"
@@ -97,7 +97,7 @@
                 ng-attr-id="{{ input.key }}"
                 name="name"
                 ng-model="formattedRecord[input.key]"
-                typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
+                uib-typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
                 typeahead-editable="false"
                 typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
                 typeahead-min-length="2"
