Fixing missing uib- to angular-ui components

--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -46,7 +46,7 @@
     <div class="form-group"
          ng-class="{ 'has-feedback has-error': form.email.$invalid }">
       <label for="email" class="col-sm-4 control-label"
-             tooltip='Must be in the format "account@domain.name"'>Email</label>
+             uib-tooltip='Must be in the format "account@domain.name"'>Email</label>
       <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.email.$invalid }">
