--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
       <label for="use12hourClock" class="col-sm-4 control-label"
-             tooltip="Whether to display times using the 12-hour clock (am/pm)">Use 12-Hour Clock</label>
+             uib-tooltip="Whether to display times using the 12-hour clock (am/pm)">Use 12-Hour Clock</label>
       <div class="col-sm-8">
         <div class="input-group">
           <select id="use12hourClock"
