--- a/web/app/participant/multiedit.tpl.html
+++ b/web/app/participant/multiedit.tpl.html
@@ -109,7 +109,7 @@
                     <button type="button"
                             class="btn btn-xs btn-danger"
                             ng-click="model.deactivateInput( input.column )"
-                            tooltip="Remove column">
+                            uib-tooltip="Remove column">
                       <i class="glyphicon glyphicon-remove"></i>
                     </button>
                   </div>
