--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -8,9 +8,9 @@
   <div class="modal-footer bg-info" ng-if="!block">
     <button type="submit" cn-autofocus class="btn btn-primary">Close</button>
   </div>
-  <progressbar ng-if="block"
+  <uib-progressbar ng-if="block"
                class="progress-striped active rounded-bottom"
                animate="false"
                value="1"
-               max="1"></progressbar>
+               max="1"></uib-progressbar>
 </form>
