--- a/web/app/cenozo/notes.tpl.html
+++ b/web/app/cenozo/notes.tpl.html
@@ -4,7 +4,7 @@
       <i class="glyphicon glyphicon-refresh glyph-hover rounded pull-right btn-primary"
          ng-if="!model.isLoading"
          ng-click="refresh( true )"
-         tooltip="Click to refresh data"
+         uib-tooltip="Click to refresh data"
          tooltip-placement="left"></i>
       {{ model.module.name.singular|cnUCWords }} Notes
       <span ng-if="model.isLoading">(Loading&hellip;)</span>
@@ -42,7 +42,7 @@
       <div class="form-horizontal">
         <div class="row" style="padding-bottom: 1em;">
           <label class="col-sm-2 control-label"
-                 tooltip="Only show notes containing all search words">Search</label>
+                 uib-tooltip="Only show notes containing all search words">Search</label>
           <div class="col-sm-10">
             <input class="form-control"
                    type="text"
