--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -9,7 +9,7 @@
         <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
            ng-if="!model.calendarModel.isLoading"
            ng-click="refresh(); $event.stopPropagation()"
-           tooltip="Click to refresh data"
+           uib-tooltip="Click to refresh data"
            tooltip-placement="left"></i>
         <span class="dropdown report-dropdown" ng-if="model.calendarModel.enableReports">
           <i class="glyphicon glyphicon-file glyph-hover btn-header"
@@ -19,7 +19,7 @@
              id="reportTypeList"
              ng-click="toggleReportTypeDropdown(); $event.stopPropagation()"
              data-toggle="dropdown"
-             tooltip="{{ model.calendarModel.isReportAllowed
+             uib-tooltip="{{ model.calendarModel.isReportAllowed
                ? 'Click to download events as a report'
                : 'The calendar is either empty, too large or reporting is disabled' }}"
              tooltip-placement="left"></i>
@@ -37,7 +37,7 @@
         </span>
         <i class="glyphicon glyph-hover btn-primary btn-header"
            ng-class="collapsed ? 'glyphicon-collapse-down' : 'glyphicon-collapse-up'"
-           tooltip="Click to expand {{ model.module.name.singular }} calendar"
+           uib-tooltip="Click to expand {{ model.module.name.singular }} calendar"
            tooltip-placement="left"></i>
       </div>
       <a class="btn-primary"
@@ -60,7 +60,7 @@
               ng-if="op.isIncluded( $state, model )"
               ng-disabled="op.isDisabled( $state, model )"
               ng-class="op.classes"
-              tooltip="{{ op.help }}"
+              uib-tooltip="{{ op.help }}"
               tooltip-placement="right"
               ng-click="op.operation( $state, model )">{{ op.title }}</button>
     </div>
