--- a/web/app/participant/history.tpl.html
+++ b/web/app/participant/history.tpl.html
@@ -4,7 +4,7 @@
       <i class="glyphicon glyphicon-refresh glyph-hover rounded pull-right btn-primary"
          ng-if="!isLoading"
          ng-click="refresh( true )"
-         tooltip="Click to refresh data"
+         uib-tooltip="Click to refresh data"
          tooltip-placement="left"></i>
       Participant History for {{ name }}
       <span ng-if="isLoading">(Loading&hellip;)</span>
