--- a/web/app/webphone/status.tpl.html
+++ b/web/app/webphone/status.tpl.html
@@ -4,7 +4,7 @@
       <i class="glyphicon glyphicon-refresh glyph-hover rounded pull-right btn-primary"
          ng-click="model.updateInformation()"
          ng-disabled="model.updating"
-         tooltip="Click to refresh data"
+         uib-tooltip="Click to refresh data"
          tooltip-placement="left"></i>
       Webphone Status <span ng-if="model.updating">(updating)</span>
     </h4>
@@ -166,7 +166,7 @@
         </div>
         <div class="col-sm-6">
           <h4 class="text-center">Client</h4>
-          <div class="form-body well text-center" tooltip="{{ javaHelp }}" tooltip-placement="bottom">
+          <div class="form-body well text-center" uib-tooltip="{{ javaHelp }}" tooltip-placement="bottom">
             <iframe width="100%" height="400" ng-src="{{ model.webphoneUrl }}">
               Your browser does not support the Java-based webphone, please use another browser
               if you wish to use the webphone.
