Adding some more cn-autofocus attributes to modal dialogs

--- a/web/app/cenozo/modal-confirm.tpl.html
+++ b/web/app/cenozo/modal-confirm.tpl.html
@@ -7,6 +7,6 @@
   </div>
   <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="no()">&#x2718 No</button>
-    <button type="submit" class="btn btn-primary">&#x2714 Yes</button>
+    <button type="submit" class="btn btn-primary" cn-autofocus>&#x2714 Yes</button>
   </div>
 </form>
