--- a/web/app/cenozo/modal-datetime.tpl.html
+++ b/web/app/cenozo/modal-datetime.tpl.html
@@ -103,6 +103,6 @@
               ng-click="local.select(null)">Empty</button>
     </div>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn btn-primary">OK</button>
+    <button type="submit" class="btn btn-primary" ng-autofocus>OK</button>
   </div>
 </form>
