--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -25,7 +25,7 @@
                  type="text"
                  placeholder="(Type the first few letters to search possible values)"
                  autocomplete="off"
-                 autofocus
+                 cn-autofocus
                  required></input>
         </div>
         <span ng-if="form.timezone.$invalid && form.timezone.$dirty">
