--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -313,6 +313,6 @@
             ng-click="local.preExisting ? remove() : cancel()">
       {{ local.preExisting ? 'Remove' : 'Cancel' }}
     </button>
-    <button type="submit" class="btn btn-primary">OK</button>
+    <button type="submit" class="btn btn-primary" cn-autofocus>OK</button>
   </div>
 </form>
