--- a/web/app/cenozo/modal-site-role.tpl.html
+++ b/web/app/cenozo/modal-site-role.tpl.html
@@ -33,6 +33,6 @@
   </div>
   <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button type="submit" ng-disabled="loading" class="btn btn-primary">OK</button>
+    <button type="submit" ng-disabled="loading" class="btn btn-primary" cn-autofocus>OK</button>
   </div>
 </form>
