--- a/web/app/cenozo/modal-text.tpl.html
+++ b/web/app/cenozo/modal-text.tpl.html
@@ -23,6 +23,6 @@
   </div>
   <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn btn-primary" ng-disabled="form.text.$invalid">OK</button>
+    <button type="submit" class="btn btn-primary" ng-disabled="form.text.$invalid" cn-autofocus>OK</button>
   </div>
 </form>
