--- a/web/app/cenozo/modal-value.tpl.html
+++ b/web/app/cenozo/modal-value.tpl.html
@@ -18,6 +18,6 @@
   </div>
   <div class="modal-footer bg-info">
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn btn-primary">OK</button>
+    <button type="submit" class="btn btn-primary" cn-autofocus>OK</button>
   </div>
 </form>
