Fixing spelling errors

--- a/web/app/participant/multiedit.tpl.html
+++ b/web/app/participant/multiedit.tpl.html
@@ -13,8 +13,8 @@
       </p>
       <p class="text-info">
         Once you have confirmed the list of participant identifiers you may apply changes to all participants
-        in the dialog box below.  Each tab allows you to make differenty types of changes to all selected
-        participant.
+        in the dialog box below.  Each tab allows you to make different types of changes to all selected
+        participants.
       </p>
       <hr />
       <div class="panel panel-default">
