Only showing timestamp tooltips to tier 3+

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -8,6 +8,7 @@
              ( model.viewModel.record.create_timestamp | cnDatetime:'datetimesecond' ) + '<br/>' +
              'Last edit on ' +
              ( model.viewModel.record.update_timestamp | cnDatetime:'datetimesecond' ) + '</div>'"
+           tooltip-enable="{{ showTimestamps }}"
            style="cursor:pointer;">
     <h4>
       <div class="pull-right">
