Adding modal-input service

--- a/web/app/cenozo/modal-text.tpl.html
+++ b/web/app/cenozo/modal-text.tpl.html
@@ -3,7 +3,7 @@
     <h4 class="modal-title">{{ title }}</h4>
   </div>
   <div class="modal-body">
-    <p class="text-info">{{ message }}</p>
+    <span class="allow-select" style="white-space: pre-wrap;">{{ message }}</span>
     <div class="row container-fluid vertical-spacer">
       <textarea id="text"
                 name="text"
