--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -75,7 +75,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
@@ -305,7 +305,7 @@
                    ng-class="{'btn-warning':local.emptyList[$index].isEmpty}"
                    ng-model="local.emptyList[$index].isEmpty"
                    ng-click="local.toggleEmpty( $index )"
-                   btn-checkbox>Empty</label>
+                   uib-btn-checkbox>Empty</label>
           </div>
         </div>
       </div>
