Fixing bug in record-add template (datetime input type constant parameter wasn't being observed)

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -119,7 +119,8 @@
                 cn-change="check( input.key )"
                 class="form-control"
                 type="text"
-                ng-click="selectDatetime( input )"
+                ng-click="true === input.constant || 'add' == input.constant ? null : selectDatetime( input )"
+                ng-readonly="true === input.constant || 'add' == input.constant"
                 onkeydown="return false"></input>
               <input ng-switch-when="color"
                 ng-attr-id="{{ input.key }}"
