Adding cn-to-number directive to fix bug in timezone picker dropdown

--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -43,6 +43,7 @@
                   name="use12hourClock"
                   ng-model="use12hourClock"
                   class="form-control"
+                  cn-to-number
                   required>
             <option value="1">Yes</option>
             <option value="0">No</option>
