Adding new script drop-down extra button to participant's record view
This update also introduces the new extra-operation-button-group directive

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -2,16 +2,7 @@
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-footer text-right bg-info" ng-if="footerAtTop">
     <div class="btn-group pull-left">
-      <button class="btn btn-default"
-              type="button"
-              ng-repeat="op in model.module.extraOperationList.add"
-              id="{{ op.id }}"
-              ng-if="op.isIncluded( $state, model )"
-              ng-disabled="op.isDisabled( $state, model )"
-              ng-class="op.classes"
-              uib-tooltip="{{ op.help }}"
-              tooltip-placement="right"
-              ng-click="op.operation( $state, model )">{{ op.title }}</button>
+      <cn-extra-operation-button-group model="model" type="add"></cn-extra-operation-button-group>
     </div>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
@@ -280,16 +271,7 @@
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
     <div class="btn-group pull-left">
-      <button class="btn btn-default"
-              type="button"
-              ng-repeat="op in model.module.extraOperationList.add"
-              id="{{ op.id }}"
-              ng-if="op.isIncluded( $state, model )"
-              ng-disabled="op.isDisabled( $state, model )"
-              ng-class="op.classes"
-              uib-tooltip="{{ op.help }}"
-              tooltip-placement="right"
-              ng-click="op.operation( $state, model )">{{ op.title }}</button>
+      <cn-extra-operation-button-group model="model" type="add"></cn-extra-operation-button-group>
     </div>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
