--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -53,16 +53,7 @@
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
     <div class="btn-group pull-left">
-      <button class="btn btn-default"
-              type="button"
-              ng-repeat="op in model.module.extraOperationList.calendar"
-              id="{{ op.id }}"
-              ng-if="op.isIncluded( $state, model )"
-              ng-disabled="op.isDisabled( $state, model )"
-              ng-class="op.classes"
-              uib-tooltip="{{ op.help }}"
-              tooltip-placement="right"
-              ng-click="op.operation( $state, model )">{{ op.title }}</button>
+      <cn-extra-operation-button-group model="calendar" type="add"></cn-extra-operation-button-group>
     </div>
     <div class="btn-group" ng-if="viewList">
       <button class="btn btn-primary"
