--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -178,16 +178,7 @@
               {{ 1 == model.listModel.total ? model.module.name.singular : model.module.name.plural }} total
             </span>
             <div class="btn-group pull-right" ng-if="!model.getChooseEnabled()">
-              <button class="btn btn-default"
-                      type="button"
-                      ng-repeat="op in model.module.extraOperationList.list"
-                      id="{{ op.id }}"
-                      ng-if="op.isIncluded( $state, model )"
-                      ng-disabled="op.isDisabled( $state, model )"
-                      ng-class="op.classes"
-                      toolip="op.help"
-                      tooltip-placement="right"
-                      ng-click="op.operation( $state, model )">{{ op.title }}</button>
+              <cn-extra-operation-button-group model="list" type="add"></cn-extra-operation-button-group>
               <button class="btn btn-default pull-right"
                       ng-if="model.getAddEnabled()"
                       ng-click="addRecord()">
@@ -221,15 +212,7 @@
       {{ 1 == model.listModel.total ? model.module.name.singular : model.module.name.plural }} total
     </span>
     <div class="btn-group pull-right" ng-if="!model.getChooseEnabled()">
-      <button class="btn btn-default"
-              type="button"
-              ng-repeat="op in model.module.extraOperationList.list"
-              id="{{ op.id }}"
-              ng-disabled="op.disabled"
-              ng-class="op.classes"
-              uib-tooltip="{{ op.help }}"
-              tooltip-placement="right"
-              ng-click="op.operation( $state, model )">{{ op.title }}</button>
+      <cn-extra-operation-button-group model="list" type="add"></cn-extra-operation-button-group>
       <button class="btn btn-default"
               ng-if="model.getAddEnabled()"
               ng-click="addRecord()">
