--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -30,16 +30,7 @@
   <form name="form" class="form-horizontal" novalidate>
     <div class="form-footer text-right bg-info" ng-if="footerAtTop">
       <div class="btn-group pull-left">
-        <button class="btn btn-default"
-                type="button"
-                ng-repeat="op in model.module.extraOperationList.view"
-                id="{{ op.id }}"
-                ng-if="op.isIncluded( $state, model )"
-                ng-disabled="op.isDisabled( $state, model )"
-                ng-class="op.classes"
-                uib-tooltip="{{ op.help }}"
-                tooltip-placement="right"
-                ng-click="op.operation( $state, model )">{{ op.title }}</button>
+        <cn-extra-operation-button-group model="model" type="view"></cn-extra-operation-button-group>
       </div>
       <div class="btn-group">
         <button ng-if="model.getDeleteEnabled()"
@@ -435,16 +426,7 @@
     </div>
     <div class="form-footer text-right rounded-bottom bg-info">
       <div class="btn-group pull-left">
-        <button class="btn btn-default"
-                type="button"
-                ng-repeat="op in model.module.extraOperationList.view"
-                id="{{ op.id }}"
-                ng-if="op.isIncluded( $state, model )"
-                ng-disabled="op.isDisabled( $state, model )"
-                ng-class="op.classes"
-                uib-tooltip="{{ op.help }}"
-                tooltip-placement="right"
-                ng-click="op.operation( $state, model )">{{ op.title }}</button>
+        <cn-extra-operation-button-group model="model" type="view"></cn-extra-operation-button-group>
       </div>
       <div class="btn-group">
         <button ng-if="model.getDeleteEnabled()"
