--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -2,7 +2,7 @@
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-footer text-right bg-info" ng-if="footerAtTop">
     <div class="btn-group pull-left">
-      <cn-extra-operation-button-group model="model" type="add"></cn-extra-operation-button-group>
+      <cn-extra-operation-button-group model="model" state="$state" type="add"></cn-extra-operation-button-group>
     </div>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
@@ -271,7 +271,7 @@
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
     <div class="btn-group pull-left">
-      <cn-extra-operation-button-group model="model" type="add"></cn-extra-operation-button-group>
+      <cn-extra-operation-button-group model="model" state="$state" type="add"></cn-extra-operation-button-group>
     </div>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
