Fixing UI button placement bug in extra-operation-button-group directive

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -213,7 +213,8 @@
       {{ 1 == model.listModel.total ? model.module.name.singular : model.module.name.plural }} total
     </span>
     <div class="btn-group pull-right" ng-if="!model.getChooseEnabled()">
-      <cn-extra-operation-button-group model="model" state="$state" type="list"></cn-extra-operation-button-group>
+      <cn-extra-operation-button-group model="model" state="$state" type="list">
+      </cn-extra-operation-button-group>
       <button class="btn btn-default"
               ng-if="model.getAddEnabled()"
               ng-click="addRecord()">
