--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,9 +1,8 @@
 <div class="container-fluid bg-primary rounded-top"><h4>{{ model.addModel.heading }}</h4></div>
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-footer text-right bg-info" ng-if="footerAtTop">
-    <div class="btn-group pull-left">
-      <cn-extra-operation-button-group model="model" state="$state" type="add"></cn-extra-operation-button-group>
-    </div>
+    <cn-extra-operation-button-group model="model" class="pull-left" state="$state" type="add">
+    </cn-extra-operation-button-group>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
@@ -270,9 +269,8 @@
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
-    <div class="btn-group pull-left">
-      <cn-extra-operation-button-group model="model" state="$state" type="add"></cn-extra-operation-button-group>
-    </div>
+    <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="add">
+    </cn-extra-operation-button-group>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
