--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -52,10 +52,8 @@
     <div class="container-fluid spacer calendar"></div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
-    <div class="btn-group pull-left">
-      <cn-extra-operation-button-group model="model" state="$state" type="calendar">
-      </cn-extra-operation-button-group>
-    </div>
+    <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="calendar">
+    </cn-extra-operation-button-group>
     <div class="btn-group" ng-if="viewList">
       <button class="btn btn-primary"
               type="button"
